# AdventOfCode

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: gmock-actions.h.BB0C2F243E551F2A.idx  gmock-all.cc.BD106F1B366A6C5F.idx  gmock-cardinalities.cc.B09C5AE8A9E28F08.idx  gmock-cardinalities.h.46247A06F4FBDD70.idx  gmock-function-mocker.h.AF88906975F93CDD.idx  gmock-generated-actions.h.1B1D4312DB6B8018.idx  gmock-internal-utils.cc.B22ED22EE30E680B.idx  gmock-internal-utils.h.0F79E249FF9B3DCE.idx  gmock-matchers.cc.84E5D233452FBBDF.idx  gmock-matchers.h.B252E1A54BECBD8A.idx  gmock-matchers.h.FD07ADEA096F7602.idx  gmock-more-actions.h.118F130F39F0DA15.idx  gmock-more-matchers.h.6AA07AFCE6310138.idx  gmock-nice-strict.h.5EB9E048DA9D255A.idx  gmock-port.h.5BD168F218B7486B.idx  gmock-port.h.61CF3EF212211F14.idx  gmock-pp.h.E0A135A1E614F244.idx  gmock-spec-builders.cc.70DF690D364472A6.idx  (+42 more)
.github/workflows/: cmake-multi-platform.yml
1/c++/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
1/c++/src/: main.cpp
1/c++/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  adventcode1_tests.exe[1]_include.cmake  adventcode1_tests.exe[1]_tests.cmake  cmake_install.cmake  tests.cpp  tests_main.cpp
Day1/c++/src/: main.cpp  (+1 more)
Day1/go/: functions.go  go.mod  main.go
Day2/c++/: .gitignore  CMakeLists.txt
Day2/c++/src/: functions.cpp  functions.h  main.cpp
Day2/c++/tests/: .gitignore  CMakeLists.txt  tests.cpp
Day2/go/: functions.go  go.mod  main.go
Dec1/c++/: .gitignore  CMakeLists.txt  compile_commands.json
Dec1/c++/.cache/clangd/index/: functions.cpp.AA2937720B6E7E21.idx  functions.h.6A26389898B6314B.idx  gmock-actions.h.4C7705D8272AAA13.idx  gmock-all.cc.2BA6BFBD62A079FD.idx  gmock-cardinalities.cc.210817BC91F0C18A.idx  gmock-cardinalities.h.F34D5D616E1F8C98.idx  gmock-function-mocker.h.04DE11217191AC02.idx  gmock-generated-actions.h.4405DDAB7FD4111E.idx  gmock-internal-utils.cc.07AD5BEAA250D676.idx  gmock-internal-utils.h.AF4A62FE5ECFD70D.idx  gmock-matchers.cc.640A77AC0DC241C6.idx  gmock-matchers.h.1E9E8A5C99E04501.idx  gmock-matchers.h.5AC7D49118B20EA4.idx  gmock-more-actions.h.A31D6EF546127308.idx  gmock-more-matchers.h.6D7C1BF395399E91.idx  gmock-nice-strict.h.A3E4015D22212D93.idx  gmock-port.h.26E16051376E9472.idx  gmock-port.h.3FEFCCA1CEEFC75A.idx  gmock-pp.h.F3B0ED8AFDA0E373.idx  gmock-spec-builders.cc.B031BA7D0B85AB4C.idx  gmock-spec-builders.h.C7A22E2A76591D4A.idx  gmock.cc.64332DE3F54E9189.idx  gmock.h.CD715E9B7837C0D8.idx  gmock_main.cc.4A187AE43D7F2D23.idx  gtest-all.cc.95C67FC74ABD6571.idx  gtest-assertion-result.cc.0C19A5E2871EFCE9.idx  gtest-assertion-result.h.60987E62B6FCE02F.idx  gtest-death-test-internal.h.E79827B3EBF68F30.idx  gtest-death-test.cc.65F23CCF78EDC5B7.idx  gtest-death-test.h.11B1AC634D198D9C.idx  gtest-filepath.cc.58D1B488C9635A76.idx  gtest-filepath.h.8C60AC8F9F91BAA6.idx  gtest-internal-inl.h.3BF298710A8AFE0B.idx  gtest-internal.h.AB233AF3B0E35D96.idx  gtest-matchers.cc.711106FE240FFD44.idx  gtest-matchers.h.41519C02A6AAD514.idx  gtest-message.h.4C604200BAB11C8C.idx  gtest-param-test.h.17A7265588F4105F.idx  gtest-param-util.h.D9BFE3D6538E6FAC.idx  gtest-port-arch.h.342C0639652D51A2.idx  (+22 more)
Dec1/c++/src/: functions.cpp  functions.h  main.cpp
Dec1/c++/tests/: CMakeLists.txt  tests.cpp
Dec2/: CMakeLists.txt
Dec2/src/: functions.cpp
Testing/Temporary/: CTestCostData.txt
(+1 files in other folders)
